2000-05-15  NotZed  <NotZed@HelixCode.com>

	* Makefile.am: Removed filter-driver test program, now just part
	of libfilter.

	* filter-driver.c: Made an object, with an api and everything, can
	apply a filter to a given mailbox.

2000-05-10  Christopher James Lahey  <clahey@helixcode.com>

	* filter-arg.h: Changed tree.h to gnome-xml/tree.h.

	* Makefile.am: Added filter-arg-types.h, filter-arg.h,
	filter-xml.h, filter-format.h, filter-druid.h, filter-editor.h.

2000-05-02  Matt Loper  <matt@helixcode.com>

	* Makefile.am: set G_LOG_DOMAIN.

2000-05-01  NotZed  <NotZed@HelixCode.com>

	* filter-driver.c (main): Fix for api.

2000-04-30  Dan Winship  <danw@helixcode.com>

	* filter-driver.c (start): Remove no-longer-necessary call to
	camel_provider_register_as_module.

2000-04-25  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am (INCLUDES): Use `$(GTKHTML_CFLAGS)'.

2000-04-20  NotZed  <NotZed@HelixCode.com>

	* filter-driver.c: Removed a bunch of crappy unrequired headers.

	* Makefile.am (filter_driver_LDADD): Added libibex back again.

2000-04-18  Dan Winship  <danw@helixcode.com>

	* filter-driver.c: remove unused camel-log.h include

2000-04-12  Matt Loper  <matt@helixcode.com>

	* filter-arg.c (filter_arg_edit_value): Return a value.

2000-03-27  NotZed  <NotZed@HelixCode.com>

	* filter-xml.c (tokenise_xmlfreeprop): Free a prop after
	tokenising it.
	(find_node_attr): Free the prop after using it.
	(load_desc): Ditto.   I use free() because xmlFree() is nowhere to
	be found.
	(filter_load_optionset): Ditto.

	* filter-arg-types.c (arg_address_values_add_xml): free() xml
	stuff, plugs a leak.
	(arg_folder_values_add_xml): Ditto.

2000-03-22  NotZed  <NotZed@HelixCode.com>

	* filter-driver.c (main): Changed to use async search api.

2000-03-04  NotZed  <NotZed@HelixCode.com>

	* filter-druid.c (html_write_options): Output 'and' bits between
	the rules.

	* filter-driver.c (main): Actually implement filtering, at least,